[project]
name = "ai-interview-backend"
version = "0.1.0"
description = "Backend for AI interview twin"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "uvicorn[standard]>=0.32,<1.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
  "httpx>=0.28,<1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv]
package = false

[tool.uv.sources]
app = { workspace = true }
